# PathCobbler

./: .gitignore  .gitmodules  ConeWallTwoPiece.json  Cone_Loading_ThreePieceClimb.json  Cone_Loading_ThreePieceMiddle.json  Cone_Loading_TwoPiece.json  CubeLoadingTwoPiece.json  CubeLoadingTwoPieceGather.json  CubeWallTwoPiece.json  Cube_Loading_TwoPiece.json  Cube_Loading_TwoPieceScore.json  Cube_Middle_OnePieceClimb.json  Cube_Two_PieceWall.json  README.md  auto.json  auto1.json  auto2.json  auto3.json  auto4.json  auto5.json  auto_test.shoe  auto_tom.shoe  bindings.py  bindings_test.py  build_c.sh  build_c_win.sh  install_pyside.md  main.py  main.spec  model_test.py  notes.txt  path.json  path2.json  path5.json  requirements.txt  test.py  test2.py
lib/: CMakeLists.txt  waypoint.c  waypoint.cpp  waypoint.hpp
lib/include/: waypoint.h  waypoint.hpp
lib/src/: main.cpp  waypoint.cpp
resources/: default_points.json
resources/images/: Icon.icns
utils/: auto.py  bindings.py  constants.py  file_utils.py  path.py  pose2d.py  rotation2d.py  translation2d.py  waypoint.py
widgets/: TableWidgetDragRows.py  cordwainer.py  field_view.py  main_widget.py  path_list.py  path_model.py  path_selector.py  waypoint.py  waypoint_control.py  waypoint_model.py  waypoint_table.py  waypoint_table_body.py
